# image_board

./: .gitignore  README.md  pyproject.toml
main/: .env.example  init_posts.sql
main/main/: settings.py  urls.py
main/polls/: models.py  views.py
main/polls/migrations/: 0001_initial.py  0002_blogpost.py
main/posts/: models.py  urls.py  views.py
main/posts/migrations/: 0001_initial.py
main/posts/templates/: index.html
main/posts/templates/posts/: comment_creat.html  form.html  index.html  post_create.html  post_delete.html  post_detail.html  post_list.html
main/posts/templates/registration/: logged_out.html  login.html
misc/python/: posts_urls_test01.py  posts_views_test01.py  test_ForeignKey_to_user01.py  test_view_query_modes01.py
mysql/: docker-compose.yml
mysql/volume/conf/: single.cnf
scripts/: dkc-batch.sh  docker_compose_multi_up.sh  docker_compose_multi_up02.sh  docker_compose_multi_up03.sh  get_dirs01.sh  get_dirs02.sh  setup_with_uv.sh
