[tool.poetry]
name = "main"
version = "0.1.0"
description = "make a image board with Django"
authors = ["Hong <hong@ubuntu-lab-01>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "2.2.0"
django-environ = "0.10.0"
django = "4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
