[project]
name = "main"
version = "0.1.0"
description = "make a image board with Django"
authors = [{ name = "Hong", email = "hong@ubuntu-lab-01" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "mysqlclient==2.2.0",
    "django-environ==0.10.0",
    "django==4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
